# lobopy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: mid_sample.py  tiny_sample.py  tiny_sample_iterative.py
src/lobopy/: __init__.py  aggregators.py  ambalefiers.py  iterative_analysis.py  models.py  patient.py
tests/: test_aggregators.py  test_ambalefiers.py  test_iterative_analysis.py  test_patient.py
